# picom

./: .clang-format  .clang-tidy  .cmake-format.yaml  .cvsignore  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS  COPYING  CPackConfig.cmake  ChangeLog  Doxyfile  History.md  LICENSE  LICENSE.spdx  Makefile  Makefile.am  Makefile_  NOTICE  PKGBUILD  README.md  _CMakeLists.txt  autogen.sh  compton-default-fshader-win.glsl  compton-fake-transparency-fshader-win.glsl  compton.1  compton.c  compton.desktop  compton.h  compton.sample.conf  configure.ac  desc.txt  flake.nix  functions.sh  interceptor.c  make-release.sh  meson.build  meson_options.txt  (+11 more)
.builds/: freebsd.yml  openbsd.yml
.circleci/: config.yml
.github/: FUNDING.yml  issue_template.md  pull_request_template.md
.github/workflows/: checkupstream.yml  ci.yml  codeql-analysis.yml  coding-style-pr.yml  coding-style.yml  cross.yml  freebsd.yml  page.yml
.well-known/: funding-manifest-urls
assets/: next.css
data/: animation_presets.conf
dbus-examples/: cdbus-driver.sh  inverter.sh
examples/trivial_tests/: Makefile  test_test1.c  test_test2.c
include/: meson.build
include/picom/: api.h  backend.h  meson.build  types.h
man/: CMakeLists.txt  compton-trans.1  compton-trans.1.asciidoc  compton.1  compton.1.asciidoc  meson.build  picom-inspect.1.adoc  picom-inspect.1.asciidoc  picom-trans.1.adoc  picom-trans.1.asciidoc  picom.1.adoc  picom.1.asciidoc
meson/: install.sh
src/: CMakeLists.txt  api.c  api_internal.h  argparse.c  argparse.h  atom.c  atom.h  c2.c  c2.h  cache.c  cache.h  common.h  compiler.h  compton.c  compton.h  compton.modulemap  config.c  config.h  config_libconfig.c  dbus.c  dbus.h  diagnostic.c  diagnostic.h  err.h  event.c  event.h  file_watch.c  file_watch.h  inspect.c  inspect.h  kernel.c  kernel.h  list.h  log.c  log.h  meson.build  meta.h  opengl.c  opengl.h  options.c  (+36 more)
src/backend/: backend.c  backend.h  backend_common.c  backend_common.h  compat.c  compat.h  driver.c  driver.h  meson.build  xrender.c
src/backend/dummy/: dummy.c
src/backend/gl/: blur.c  egl.c  egl.h  gl_common.c  gl_common.c.orig  gl_common.h  glx.c  glx.h  meson.build  shaders.c
src/backend/xrender/: meson.build  xrender.c
src/fuzzer/: c2.c
src/renderer/: command_builder.c  command_builder.h  damage.c  damage.h  layout.c  layout.h  meson.build  renderer.c  renderer.h
src/transition/: curve.c  curve.h  meson.build  preset.c  preset.h  script.c  script.h  script_internal.h
src/utils/: cache.c  cache.h  console.h  dynarr.c  dynarr.h  file_watch.c  file_watch.h  kernel.c  kernel.h  list.h  meson.build  meta.h  misc.c  misc.h  process.c  process.h  statistics.c  statistics.h  str.c  str.h  ui.c  ui.h  uthash_extra.h
src/wm/: defs.h  meson.build  tree.c  win.c  win.h  wm.c  wm.h  wm_internal.h
subprojects/: libconfig.wrap  test.h.wrap
subprojects/test.h/: CMakeLists.txt  test.h
subprojects/test.h/examples/trivial_tests/: Makefile  test_test2.c
tests/: basic.py  cmake-test.sh  make-tests.sh  run_one_test.sh  run_tests.sh
tests/configs/: clear_shadow_unredirected.conf  issue239.conf  issue239_2.conf  issue239_3.conf  issue239_universal.conf  issue314.conf  issue357.conf  issue394.conf  issue465.conf  parsing_test.conf  pull1091.conf  shader.frag
tests/testcases/: basic.py  clear_shadow_unredirected.py  common.py  issue239.py  issue239_2.py  issue239_3.py  issue239_3_norefresh.py  issue299.py  issue314.py  issue314_2.py  issue314_3.py  issue357.py  issue394.py  issue465.py  issue525.py  pull1091.py  redirect_when_unmapped_window_has_shadow.py  wm_motif_hints.py
tools/: animgen.c  meson.build
tracer/: Cargo.toml  build.rs  flake.nix
tracer/src/: main.rs
tracer/src/bpf/: uprobe.bpf.c  vmlinux.h
