option('sanitize', type: 'boolean', value: false, description: 'Compile compton with sanitizers')
option('xinerama', type: 'boolean', value: true, description: 'Enable XINERAMA support')
option('config_file', type: 'boolean', value: true, description: 'Enable config file support')
option('regex', type: 'boolean', value: true, description: 'Enable regex support in window conditions')

option('vsync_drm', type: 'boolean', value: false, description: 'Enable support for using drm for vsync')

option('opengl', type: 'boolean', value: true, description: 'Enable features that require opengl (opengl backend, and opengl vsync methods)')
option('dbus', type: 'boolean', value: true, description: 'Enable suport for D-Bus remote control')

option('xrescheck', type: 'boolean', value: false, description: 'Enable X resource leak checker (for debug only)')

option('build_docs', type: 'boolean', value: false, description: 'Build documentation and man pages')

option('new_backends', type: 'boolean', value: false, description: 'Does not really do anything right now')
